--- a/templates/home.html
+++ b/templates/home.html
@@ -1,49 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Nzovu Careers</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nzovu Careers</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <style>
-        h1{
-            font-size: 40px;
-            font-family: Roboto;
-            font-weight: normal;
-            color: rgb(50, 50, 50);
-            text-align: center;
-        }
-
         #banner {
-            width: 100%;
             height: 360px;
+            width: 100%;
             object-fit: cover;
         }
-
-        h2 {
-            font-family: Roboto;
-            font-size: 32px;
-            color: rgb(100, 100, 100);
-            text-align: center;
-        }
-
-        .bodytext {
-            font-family: Roboto;
-            color: rgb(80, 80, 80);
-        }
-
-        #container {
-            max-width: 720px;
-            margin: 0 auto 0 auto;
-        }
-
     </style>
 </head>
 <body>
-    <div id="container">
-        <h1>Nzovu Careers</h1>
-        <img id="banner" src="static/banner.jpg">
-        <h2>About Nzovu</h2>
-        <p class="bodytext">
+    <div class="container">
+        <h1 class="text-center mt-2 mb-4">Nzovu Careers</h1>
+        <img class="img-fluid" id="banner" src="static/banner.jpg">
+        <h2 class="text-center mt-2 mb-4">About Nzovu</h2>
+        <p class="lead">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
             Ut enim ad minim veniam, quis nostrud exercitation ullamco 
@@ -53,11 +28,11 @@
             sint occaecat cupidatat non proident, sunt in culpa qui officia 
             deserunt mollit anim id est laborum.
         </p>
-        <h2>Open Positions</h2>
-        <p class=""bodytext>TODO - show the Jobs here</p>
-        <div style="text-align: center;">
-            <button>Contact Us</button>
-             <p>Copyright 2023, Nzovu</p>
+        <h2 class="text-center mt-2 mb-4">Open Positions</h2>
+        <p>TODO - show the Jobs here</p>
+        <div class="text-center">
+            <button class="btn btn-primary btn-lg">Contact Us</button>
+            <p class="mt-4">Copyright 2023, Nzovu</p>
         </div>
     </div>
 </body>
