--- a/templates/job_item.html
+++ b/templates/job_item.html
@@ -13,8 +13,8 @@
         </div>
         {% endif %}
     </div>
-    <div class="col-3">
-        <button type="button" class="btn btn-outline-primary">Apply</button>
+    <div class="col-3 padding-right: 16px">
+        <a href="https://drayceepro.com/" type="button" class="btn btn-outline-primary">Apply</a>
     </div>
     
 </div>
