Added email links

--- a/templates/home.html
+++ b/templates/home.html
@@ -48,7 +48,7 @@
             </div>
         </p>
         <div class="text-center">
-            <button class="btn btn-primary btn-lg">Contact Us</button>
+            <a class="btn btn-primary btn-lg" href="mailto:kananzovu@gmail.com?subject=Question%20about%20Job%20openings&body=My%20name%3A%20%3CYour%20name%20here%3E%0D%0A%0D%0AMy%20question%3A%20%3CEnter%20Question%20here%3E">Contact Us</a>
             {% include 'footer.html' %}
         </div>
     </div>
