--- a/templates/job_item.html
+++ b/templates/job_item.html
@@ -14,7 +14,6 @@
         {% endif %}
     </div>
     <div class="col-3 padding-right: 16px">
-        <a href="https://drayceepro.com/" type="button" class="btn btn-outline-primary">Apply</a>
+        <a href="mailto:kananzovu@gmail.com?subject=Sample%20Application for {{job['title']}}&body=My%20name%3A%20%3CYour%20name%20here%3E%0D%0A%0D%0AResume%20link%3A%20%3CYour%20resume%20Link%3E%0D%0A%0D%0AMy%20LinkedIn%20link%3A%20%3CYour%20Linkedin%20Link%3E" type="button" class="btn btn-outline-primary">Apply</a>
     </div>
-    
 </div>
