--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,11 +1,10 @@
 <div class="container">
     <footer class="py-3 my-4">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+        <li class="nav-item"><a target="_blank" href="https://drayceepro.com/" class="nav-link px-2 text-body-secondary">Home</a></li>
+        <li class="nav-item"><a target="_blank" href="https://drayceepro.com/music/tracks" class="nav-link px-2 text-body-secondary">Tracks</a></li>
+        <li class="nav-item"><a target="_blank" href="https://drayceepro.com/sound-kits" class="nav-link px-2 text-body-secondary">Sound Kits</a></li>
+        <li class="nav-item"><a target="_blank" href="https://drayceepro.com/contact" class="nav-link px-2 text-body-secondary">Contact</a></li>
       </ul>
       <p class="text-center text-body-secondary">&copy; 2023 Nzovu Media, Inc</p>
     </footer>
