Made some changes

--- a/templates/home.html
+++ b/templates/home.html
@@ -39,7 +39,7 @@
                 <img src="/static/people.jpg", style="height: 320px; border-radius: 4px;">
             </div>
         </div>
-        <h2 class="text-center mt-2 mb-4">Open Positions</h2>
+        <h2 class="text-center mt-2 mb-4">Open Jobs</h2>
         <p>
             <div>
                 {% for job in jobs %}
