--- a/templates/home.html
+++ b/templates/home.html
@@ -3,24 +3,14 @@
 <head>
     <title>Nzovu Careers</title>
     <link rel="icon" href="/static/logo.webp" sizes="96x96" type="image/png">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <style>
-        #banner {
-            height: 360px;
-            width: 100%;
-            object-fit: cover;
-            margin-bottom: 16px;
-        }
-    </style>
+    {% include 'bootstrap.html' %}
 </head>
 <body>
     {% include 'nav.html' %}
-    <img class="img-fluid" id="banner" src="/static/banner.jpg">
+    {% include 'banner.html' %}
     <div class="container">
         <h1 class="text-center mt-2 mb-4">
-            {{company_name}} Careers
+            Nzovu Careers
         </h1>
         <div class="row" style="margin-bottom: 16px;">
             <div class="col-md-6">
