--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,7 @@
 <div class="container">
     <footer class="py-3 my-4">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><a target="_blank" href="https://drayceepro.com/" class="nav-link px-2 text-body-secondary">Home</a></li>
+        <li class="nav-item"><a  href="/" class="nav-link px-2 text-body-secondary">Home</a></li>
         <li class="nav-item"><a target="_blank" href="https://drayceepro.com/music/tracks" class="nav-link px-2 text-body-secondary">Tracks</a></li>
         <li class="nav-item"><a target="_blank" href="https://drayceepro.com/sound-kits" class="nav-link px-2 text-body-secondary">Sound Kits</a></li>
         <li class="nav-item"><a target="_blank" href="https://drayceepro.com/contact" class="nav-link px-2 text-body-secondary">Contact</a></li>
