--- a/templates/job_item.html
+++ b/templates/job_item.html
@@ -14,6 +14,6 @@
         {% endif %}
     </div>
     <div class="col-3 padding-right: 16px">
-        <a href="/job/{{job.id}}" type="button" class="btn btn-outline-primary">Apply</a>
+        <a href="/job/{{job.id}}" target="_blank" type="button" class="btn btn-outline-primary">Apply</a>
     </div>
 </div>
