--- a/templates/jobpage.html
+++ b/templates/jobpage.html
@@ -39,8 +39,8 @@
     
         <h4>Salary</h4>
         <p>{{ job.currency }}{{ job.salary }}</p>
+        {% include 'application_form.html' %}
     </div>
-    
     {% include 'footer.html' %}
 </body>
 </html>
